[package]
name = "yall"
version = "0.1.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
atty = "0.2.14"
log = { version = "0.4.11", features = ["std"] }
termcolor = "1.1.0"

[dev-dependencies]
clap = { version = "2.33.3", default-features = false }
