[package]
name = "yall"
version = "0.5.0"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aswild/yall"
documentation = "https://docs.rs/yall"
description = "A simple lightweight backend for the log crate."
readme = "README.md"
keywords = ["logging"]
categories = ["development-tools::debugging"]
edition = "2018"

[dependencies]
is-terminal = "0.4.9"
log = { version = "0.4", features = ["std"] }
termcolor = "1.1"

[dev-dependencies]
clap = { version = "4.3", features = ["cargo"] }
